# mindgraph-rs

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  mindgraph.db
.github/workflows/: ci.yml
benches/: graph_bench.rs
docs/: DESIGN_LESSONS_ANALYSIS.md  FIX_HARDENING_PLAN.md  GTM_PLAN_30_60_90.md  GTM_PLAN_CONSULTING_TRACK.md  GTM_PLAN_HIRING_TRACK.md  SAAS_IMPLEMENTATION_PLAN.md  mindgraph-architecture.docx  mindgraph-server-endpoint-spec.docx
examples/: agent_memory.rs  basic.rs  embedding_search.rs
mindgraph-mcp/: Cargo.toml
mindgraph-mcp/src/: main.rs
mindgraph-server/: Cargo.toml
mindgraph-server/src/: handlers.rs  lib.rs  main.rs
mindgraph-skill/: README.md  SKILL.md
src/: agent.rs  async_graph.rs  embeddings.rs  error.rs  events.rs  graph.rs  lib.rs  openai.rs  provenance.rs  query.rs  traversal.rs  types.rs  watch.rs
src/schema/: edge.rs  edge_props.rs  mod.rs  node.rs  node_props.rs
src/schema/props/: action.rs  agent.rs  epistemic.rs  intent.rs  memory.rs  mod.rs  reality.rs
src/storage/: cozo.rs  migrations.rs  mod.rs
tests/: async_integration.rs  integration.rs
