[package]
name = "mindgraph"
version = "0.4.0"
edition = "2021"
rust-version = "1.70"
description = "A structured semantic memory graph for agentic systems"
license = "MIT"
repository = "https://github.com/shuruheel/mindgraph-rs"
readme = "README.md"
authors = ["Shuruheel Ahamed"]
keywords = ["knowledge-graph", "semantic-memory", "agentic", "graph-database"]
categories = ["data-structures", "database"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
async = ["dep:tokio"]
openai = ["dep:ureq"]

[dependencies]
cozo = { version = "0.7", default-features = false, features = ["minimal", "rayon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
smartstring = "1"
tokio = { version = "1", features = ["rt"], optional = true }
ureq = { version = "2", features = ["json"], optional = true }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
