[workspace]
members = ["mindgraph-server", "mindgraph-mcp"]

[package]
name = "mindgraph"
version = "0.7.0"
edition = "2021"
rust-version = "1.85"
description = "A structured semantic memory graph for agentic systems"
license = "MIT"
repository = "https://github.com/shuruheel/mindgraph-rs"
readme = "README.md"
authors = ["Shuruheel Ahamed"]
keywords = ["knowledge-graph", "semantic-memory", "agentic", "graph-database"]
categories = ["data-structures", "database"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
async = ["dep:tokio", "dep:async-trait", "dep:futures-core"]
openai = ["dep:ureq"]
tracing = ["dep:tracing"]

[dependencies]
cozo = { version = "0.7", default-features = false, features = ["minimal", "rayon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
smartstring = "1"
tokio = { version = "1", features = ["rt", "sync"], optional = true }
async-trait = { version = "0.1", optional = true }
futures-core = { version = "0.3", optional = true }
ureq = { version = "2", features = ["json"], optional = true }
tracing = { version = "0.1", optional = true }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
criterion = { version = "0.5", features = ["html_reports"] }
futures-util = "0.3"

[[bench]]
name = "graph_bench"
harness = false

[[example]]
name = "basic"

[[example]]
name = "agent_memory"

[[example]]
name = "embedding_search"
