[package]
name = "mindgraph-mcp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mindgraph-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "0.17", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "signal"] }
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
