[package]
name = "mindgraph-server"
version = "0.1.0"
edition = "2021"

[dependencies]
mindgraph = { path = "..", features = ["async"] }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
